# Chrom3D

./: .cmake-format.yaml  .gitattributes  .gitignore  CMakeLists.txt  LICENCE  Makefile  README  README.md
preprocess_script/: add_inter_chrom_beads.sh  arrowhead_to_domains.sh  chiasig_fdr_calc.R  chiasig_fdr_oddratio_calc.R  convert_coo_to_full_matrix.py  convert_coo_to_full_matrix2.py  inter_chrom_beads.py  make_chiasig_input.sh  make_diploid_gtack.py  make_gtrack.py  make_gtrack.sh  make_gtrack_incl_lad.sh  make_interchr_chiasig_input.py  make_normalised_matrix.py  plotGtrack.R  pre_aggregate_count.py  reduce_domains.sh  visualise_lad.py
src/: Bead.cpp  Bead.h  Chrom3D.cpp  Chromosome.cpp  Chromosome.h  Constraint.cpp  Constraint.h  MCMC.cpp  MCMC.h  Model.cpp  Model.h  Randomizer.cpp  Randomizer.h  Util.cpp  Util.h
src/tclap-1.2.1/tests/: tmp.out
test_files/: GM12878.gtrack  test.gtrack  testStructure.gtrack  toy-global-example.gtrack
